2007-05-01  Jean-Christophe Baillie  <baillie@gostai.com>

	make undefall deprecated. 
	* src/ucommand.cc: undefall is now deprecated, use reset instead.

2007-05-01  Jean-Christophe Baillie  <baillie@gostai.com>

	Fix the bug on reset (ticket #21) 
	* src/uobject.cc: UHubObjects dtor must release their timers.
	* src/userver.cc: add proper destruction/recreation of hubs.

2007-05-01  Jean-Christophe Baillie  <baillie@gostai.com>

	Minor reformating. 
	* src/userver.cc: done.

2007-04-30  Matthieu Nottale  <nottale@gostai.com>

	Fix a segfault when reseting.
	* src/userver.cc: Do not clear tagtab when reseting, its content is refcounted.

2007-04-22  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Minor code cleanup.
	* src/ucommand.cc: Formatting changes.

2007-04-22  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Remove a duplicate include.
	* src/ucommand.cc: Here (sstream).

2007-04-22  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Remove useless include.
	* src/uvalue.cc: Don't include iomanip.

2007-04-20  Jean-Christophe Baillie  <baillie@gostai.com>

	That was a request after last years "coupe de robotique" experience.
	I'm pretty sure the syntax will evolve in k2, but we will keep this
	backward compatible and it will be usable right now.

	add a 'taglist' keyword to display the list of currently running tags.
	* NEWS: signal the feature.
	* src/parser/bison/utoken.l: add the keyword.
	* src/ucommand.cc: add the code that does the job.

2007-04-20  Jean-Christophe Baillie  <baillie@gostai.com>

	remove too restricting ASSERT, fix ticket #136. 
	* src/ucommand.cc: change ASSERT in if, for the case when the
	expression evaluation fail (it leads to a legitimate unasserted case).

2007-04-20  Jean-Christophe Baillie  <baillie@gostai.com>

	revert change from previous commit: std::fixed should not be used. 
	* src/uvalue.cc: std::fixed does not behave as it should.

2007-04-20  Jean-Christophe Baillie  <baillie@gostai.com>

	fix ticket #24 